Merged revisions 83667 via svnmerge from svn+ssh://pythondev@svn.python.org/python/branches/py3k

........
  r83667 | mark.dickinson | 2010-08-03 17:08:16 +0100 (Tue, 03 Aug 2010) | 2 lines

  Issue #9450:  Fix memory leaks in readline.remove/replace_history_entry.
........